--- a/ExamGenerator/static/css/true-or-false.css
+++ b/ExamGenerator/static/css/true-or-false.css
@@ -14,26 +14,7 @@ body {
     position: relative;
 }
 
-#game_header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    text-align: left;
-    background-color: transparent;
-}
-
-#game_header h2 {
-    margin: 0;
-    padding: 0;
-    font-size: 2em;
-    font-weight: bold;
-    color: #333;
-}
-
-.question-card {
+.question-card  {
     display: none;
     flex-direction: column;
     align-items: flex-start;
@@ -44,7 +25,7 @@ body {
     color: white;
 }
 
-.question-text {
+/* .question-text {
     margin-bottom: 10px;
     font-size: 1.5em;
     color: white;
@@ -56,7 +37,7 @@ body {
     text-align: left;
     width: 95%;
     height: 40px;
-}
+} */
 
 .answer-options label {
     display: block;
@@ -77,16 +58,16 @@ body {
 p {
     color: var(--black-color);
     text-align: left;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-top: 15px;
     margin-bottom: 25px;
 }
+
 .correct-answer {
     color: var(--black-color);
     text-align: left;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-top: 15px;
-    margin-bottom: 25px;
 }
 
 .user-answer.correct {
@@ -110,7 +91,7 @@ p {
     gap: 10px; 
 }
 
-button {
+/* button {
     margin: 0; 
     font-size: 1.5em;
     padding: 10px 20px;
@@ -125,7 +106,7 @@ button {
 }
 
 #submit-button {
-    position: relative; /* Position the button normally */
+    position: relative; 
     color: white;
     background: #5B699C;
     border: 2px solid white;
@@ -137,7 +118,7 @@ button {
 #cancel-button:hover {
     color: white;
     background-color: #5B699C;
-}
+} */
 
 .user-answer.active {
     background-image: linear-gradient(to right, rgba(91, 105, 156, 0.2), rgba(239, 242, 254, 0.6));
