--- a/ExamGenerator/templates/game/multiple-choice.html
+++ b/ExamGenerator/templates/game/multiple-choice.html
@@ -4,35 +4,31 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/multiple-choice.css') }}">
 {% endblock %}
 
-{% block game_title %} View Progress {{ game_mode }} {% endblock %}
+{% block game_title %} {{ game_mode }} {% endblock %}
 
-{% block game_header %} Multiple Choice {{ game_mode }} {% endblock %}
+{% block game_header %} {{ game_mode }} {% endblock %}
 
 {% block game_content %}
     <div id="question-container">
         {% if generated_questions %}
             {% for question_data in generated_questions %}
-                <div class="question-card" style="display: none;">
-                    <p class="question-text">{{ question_data.text }}</p>
+                <div class="question-card">
+                    <p class="question-text">{{ question_data.question }}</p>
                     <p>Select up to one option</p>
                     <div class="answer-options">
-                        {% for option in question_data.options %}
-                            <input type="radio" id="option_{{ loop.index }}" name="question_{{ loop.index }}" value="{{ option }}" class="user-answer">
-                            <label for="option_{{ loop.index }}">{{ option }}</label>
+                        {% for choice in question_data.choices %}
+                            <input type="radio" id="choice-{{ loop.index }}" name="choice-{{ loop.index }}" value="{{ choice }}" class="user-answer">
+                            <label for="choice-{{ loop.index }}">{{ choice }}</label>  
                         {% endfor %}
                     </div>                    
-                    <span class="correct-answer" style="display: none;"> The correct answer is: {{ question_data.answer }}</span>
+                    <span class="correct-answer" style="display: none;">{{ question_data.answer }}</span>
                 </div>
             {% endfor %}
         {% else %}
             <p id="no-questions-message">No questions generated.</p>
         {% endif %}
     </div>
-    <div id="button-container">
-        <button id="next-button" style="display: none;">Next Question</button>
-        <button id="submit-button">Submit</button>
-        <button id="cancel-button">Cancel</button>
-    </div>
+    <!-- buttons are in game-base.html since it will be used by all quiz types -->
 {% endblock %}
 
 {% block js_file %}
