--- a/ExamGenerator/templates/index.html
+++ b/ExamGenerator/templates/index.html
@@ -2,6 +2,7 @@
 
 {% block css_file %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">    
 {% endblock %}
 
 {% block title %} Home {% endblock %} 
@@ -15,10 +16,17 @@
                 <li><a href="#aboutus">About</a></li>
                 <li><a href="{{ url_for('views.dashboard') }}"><img src="../static/images/logo.svg" alt="Easygen"></a></li>
                 <li><a href="#contactinfo">Contact us</a></li>
-                <li><a href="{{ url_for('auth.signup') }}">Register</a></li>
+                <li>
+                    <button type="button" id="account-type-btn" data-bs-toggle="modal" data-bs-target="#accTypeModal">
+                        Register
+                    </button>
+                </li>
             </ul>
         </nav>
     </header>
+
+    <!-- Select Account Type modal -->
+    {% include "includes/account-type.html" %}
 
     <section class="welcome-section" id="welcome">
         <div class="tagline">
@@ -63,7 +71,7 @@
                 <p>Our mission is to make learning more interactive, personalized, and effective, while empowering teachers to save time without sacrificing quality.</p>
             </div>
             <div>
-                <img src="../static/images/aboutus.svg" alt="aboutuspng">
+                <img src="../static/images/aboutus.svg" alt="aboutus">
             </div>
         </div>
     </section>
@@ -193,4 +201,9 @@
         });
     </script>
       
+{% endblock %}
+
+{% block js_file %}
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>    
 {% endblock %}
