--- a/ExamGenerator/templates/game/multiple-choice.html
+++ b/ExamGenerator/templates/game/multiple-choice.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/multiple-choice.css') }}">
 {% endblock %}
 
-{% block game_title %} {{ game_mode }} {% endblock %}
+{% block game_title %} Multiple Choice {% endblock %}
 
-{% block game_header %} {{ game_mode }} {% endblock %}
+{% block game_header %} Multiple Choice {% endblock %}
 
 {% block game_content %}
     <div id="question-container">
