--- a/ExamGenerator/templates/game/true-or-false.html
+++ b/ExamGenerator/templates/game/true-or-false.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/true-or-false.css') }}">
 {% endblock %}
 
-{% block game_title %} {{ game_mode }} {% endblock %}
+{% block game_title %} True or False {% endblock %}
 
-{% block game_header %} {{ game_mode }} {% endblock %}
+{% block game_header %} True or False {% endblock %}
 
 {% block game_content %}
     <div id="question-container">
