--- a/ExamGenerator/templates/index.html
+++ b/ExamGenerator/templates/index.html
@@ -131,10 +131,10 @@
             <div class="jump">
                 <h2>Join Easygen and Simplify Your Learning or Teaching</h2>
                 <p>Sign up now to get started with creating quizzes, generating exams, and exploring all that Easygen has to offer.</p>
-                <a href="{{ url_for('auth.signup') }}">
+                <button type="button" data-bs-toggle="modal" data-bs-target="#accTypeModal">
                     <span> GET STARTED </span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-right"><path d="M7 7h10v10"/><path d="M7 17 17 7"/></svg>    
-                </a>
+                </button>
             </div>
         </div>
         <div class="contact-container">
