--- a/ExamGenerator/templates/game/identification.html
+++ b/ExamGenerator/templates/game/identification.html
@@ -4,9 +4,9 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/identification.css') }}">
 {% endblock %}
 
-{% block game_title %} {{ game_mode }} {% endblock %}
+{% block game_title %} Identification {% endblock %}
 
-{% block game_header %} {{ game_mode }} {% endblock %}
+{% block game_header %} Identification {% endblock %}
 
 {% block game_content %}
 
@@ -24,12 +24,6 @@
         <p id="no-questions-message">No questions generated.</p>
     {% endif %}
 
-    <!-- <div class="question-card">
-        <p class="question-text">Tangina quesiton to eh hayuup?? </p>
-        <label for="user-ans">Answer:</label>
-        <input type="text" id="user-ans" class="user-answer" placeholder="Enter your answer here" />
-        <span class="correct-answer" style="display: none;">Sagot dito </span>
-    </div> -->
     <!-- buttons are in game-base.html since it will be used by all quiz types -->
 </div>
 {% endblock %}
